# adaptive_mcp_server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TESTING.md  TEST_REPORT.md  __init__.py  docker-compose.yml  jsonrpc_server.js  mcp_config.json  mcp_minimal.py  mcp_server.js  node_minimal.js  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp.bat  run_server.py  setup.py
adaptive_mcp_server/: __init__.py  __main__.py  cli.py
core/: errors.py  resources.py
docs/: API.md  IMPLEMENTATION.md  TESTING.md
examples/: advanced_research.py  basic_reasoning.py  validation_demo.py
explanation/: formatter.py
integration/: __init__.py  context_manager.py  feedback_loop.py  module_bridge.py  reasoning_validator.py
mcp/: __init__.py  types.py
reasoning/: __init__.py  abductive.py  branching.py  counterfactual.py  inductive.py  lateral.py  logical.py  mock.py  orchestrator.py  sequential.py
research/: __init__.py  enhanced_search.py  exa_integration.py  mock.py  research_integrator.py
scripts/: setup_dev.py
tests/: __init__.py  conftest.py  test_advanced_validator.py  test_creative_logical.py  test_end_to_end.py  test_errors.py  test_formatter.py  test_integration.py  test_orchestrator.py  test_reasoning_comprehensive.py  test_reasoning_strategies.py  test_reasoning_strategies_integration.py  test_research.py  test_research_integration.py  test_resources.py  test_reviewer.py  test_sequential.py  test_simplified.py  test_validation.py  (+2 more)
(+7 files in other folders)
